--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <div class="container">
     <!-- Change this image link to your logo -->
-    <img src="https://graph.org/file/4e8a1172e8ba4b7a0bdfa.jpg" class="logo" alt="Logo" />
+    <img src="https://i.imgur.com/oFuKfaG.png" class="logo" alt="Logo" />
     <h1>Copy HTML Template from File</h1>
     <button class="copy-btn" onclick="copyFromFile()">
       <i class="fa fa-copy"></i> Copy Code
