--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     html, body {
       height: 100%;
       font-family: Arial, sans-serif;
-      background-color: #f9fafb;
+      background-color: #e5f3ff;
       display: flex;
       flex-direction: column;
       align-items: center;
