--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       padding: 40px;
       background: #fff;
       border-radius: 20px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 
+      0 4px 20px rgba(255, 153, 51, 0.6),  /* Orange Shadow */
+      0 8px 25px rgba(0, 0, 0, 0.1),      /* Default Shadow */
+      0 4px 15px rgba(19, 136, 8, 0.4);    /* Green Shadow */
     }
 
     .logo {
